fix : 주문 성공 페이지 - 버튼이 요소의 크기를 벗어났을 때 overflow : hidden 처리

--- a/src/main/webapp/resources/css/order/orderSuccess.css
+++ b/src/main/webapp/resources/css/order/orderSuccess.css
@@ -17,6 +17,7 @@ body {
     height: 75%;
     background: white;
     width: 450px;
+    overflow: hidden;
 }
 .order-success__title {
     margin-top: 50px;
